added href to buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -213,34 +213,34 @@
 			<div class="underline mb-hg">&mdash;</div>
 	
 			<figure class="project__shape">
-				<img class="project__image" src="/resources/img/project-1.jpg" alt="project-1" />
-				<h4 class="heading-4">Picureich</h4>
+				<img class="project__image" src="/resources/img/ecotourism.png" alt="project-1" />
+				<h4 class="heading-4">Ecotourism</h4>
 				<figcaption class="project__caption">
-					<h4 class="heading-4 mb-sm">Picureich</h4>
+					<h4 class="heading-4 mb-sm">Ecotourism</h4>
 					<p class="mb-md">Bootstrap, Nodejs, MongoDB</p>
 					<button id="project__btn" class="btn btn-outline">More Info</button>
 				</figcaption>
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-1.jpg" alt="project-1" />
+							<img class="project__overlay--image" src="/resources/img/ecotourism.png" alt="project-1" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<div class="project__overlay--header">
-							<h4 class="heading-4">Pictureich</h4>
-							<a class="link" href="#">Github Link</a>
-							<a class="link" href="#">Website Link</a>
+							<h4 class="heading-4">Ecotourism</h4>
+							<a class="link" href="https://github.com/Rituraj26/Eco-tourism">Github Link</a>
+							<a class="link" href="https://ecotourism.herokuapp.com">Website Link</a>
 						</div>
 						<hr>
-						<p class="project__overlay--para">It is full stack application which is used to sell pictures.</p>
+						<p class="project__overlay--para">Here you can get the details of all the eco-friendly places, it also allows you to post a place. You can also comment and look into other’s comment for details. It also shows the exact location of the place.</p>
 					</div>
 				</div>
 			</figure>
 
 			<figure class="project__shape">
-				<img class="project__image" src="/resources/img/project-2.jpg" alt="project-2" />
+				<img class="project__image" src="/resources/img/homejone.png" alt="project-2" />
 				<h4 class="heading-4">Homejone</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Homejone</h4>
@@ -250,7 +250,7 @@
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-2.jpg" alt="project-5" />
+							<img class="project__overlay--image" src="/resources/img/homejone.png" alt="project-2" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
@@ -258,8 +258,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Homejone</h4>
-							<a class="link" href="#">Github Link</a>
-							<a class="link" href="#">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/homejone">Github Link</a>
+							<a class="link" href="https://homejone.herokuapp.com">Website Link</a>
 						</div>
 
 						<hr>
@@ -271,7 +271,7 @@
 
 
 			<figure class="project__shape">
-				<img class="project__image" src="/resources/img/project-3.jpg" alt="project-3" />
+				<img class="project__image" src="/resources/img/health_kitchen.png" alt="project-3" />
 				<h4 class="heading-4">Health Kitchen</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Health Kitchen</h4>
@@ -281,7 +281,7 @@
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-3.jpg" alt="project-3" />
+							<img class="project__overlay--image" src="/resources/img/health_kitchen.png" alt="project-3" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
@@ -289,8 +289,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Health Kitchen</h4>
-							<a class="link" href="#">Github Link</a>
-							<a class="link" href="#">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Health_Kitchen">Github Link</a>
+							<a class="link" href="https://healthkitchen.herokuapp.com">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">It is a landing page for healthy food and juices selling page. I created this website using CSS Grid and using some transformation property to show some nice transitions.</p>
@@ -317,8 +317,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">GPA Calculator</h4>
-							<a class="link" href="#">Github Link</a>
-							<a class="link" href="#">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/gpa-calculator">Github Link</a>
+							<a class="link" href="https://gpacalculator1926.herokuapp.com">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">GPA Calculator is a react application which calculates the gpa of different students. It has two categories for CSE department and Other category. If you are in CSE department then it will directly display all the subjects but if you are in other departments then it will show you the form where you have enter the credit to calculate it. You can also calculate CGPA by entering the semester GPAs.</p>
@@ -328,7 +328,7 @@
 
 
 			<figure class="project__shape">
-				<img class="project__image" src="/resources/img/project-5.jpg" alt="project-5" />
+				<img class="project__image" src="/resources/img/freddie.png" alt="project-5" />
 				<h4 class="heading-4">Freddie Mercury Tribute Page</h4>
 				<figcaption class="project__caption">
 					<h4 class="heading-4 mb-sm">Freddie Mercury Tribute Page</h4>
@@ -339,7 +339,7 @@
 					<div class="project__overlay--container">
 
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-5.jpg" alt="project-5" />
+							<img class="project__overlay--image" src="/resources/img/freddie.png" alt="project-5" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i>	 -->
@@ -347,8 +347,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Freddie Mercury Tribute Page</h4>
-							<a class="link" href="#">Github Link</a>
-							<a class="link" href="#">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Freddie-Mercury-Tribute-Page">Github Link</a>
+							<a class="link" href="https://freddiemercury.herokuapp.com">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">It is simple page website which i created to give a tribute to Freddie Mercury. I used CSS Grid to layout the responsiveness.</p>
@@ -358,18 +358,18 @@
 
 
 			<figure class="project__shape">
-				<img class="project__image" src="/resources/img/project-6.jpg" alt="project-6" />
-				<h4 class="heading-4">Video Player</h4>
+				<img class="project__image" src="/resources/img/budget_calc.png" alt="project-6" />
+				<h4 class="heading-4">Budget Calculator</h4>
 				<figcaption class="project__caption">
-					<h4 class="heading-4 mb-sm">Video Player</h4>
-					<p class="mb-md">ReactJs, CSS Grid</p>
+					<h4 class="heading-4 mb-sm">Budget Calculator</h4>
+					<p class="mb-md">Vanilla JS</p>
 					<button id="project__btn" class="btn btn-outline">More Info</button>
 				</figcaption>
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-6.jpg" alt="project-6" />
+							<img class="project__overlay--image" src="/resources/img/budget_calc.png" alt="project-6" />
 							<span class="project__overlay--close">&times;</span>
 							<!-- <i class="fas fa-chevron-left" id="left"></i>
 							<i class="fas fa-chevron-right" id="right"></i> -->
@@ -377,8 +377,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Video Player</h4>
-							<a class="link" href="#">Github Link</a>
-							<a class="link" href="#">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Budget_calculator">Github Link</a>
+							<a class="link" href="https://budgetcalculator265.herokuapp.com">Website Link</a>
 						</div>
 
 						<hr>
@@ -388,6 +388,36 @@
 				</div>
 			</figure>
 
+			<figure class="project__shape">
+				<img class="project__image" src="/resources/img/blogstack.png" alt="project-6" />
+				<h4 class="heading-4">Blogstack</h4>
+				<figcaption class="project__caption">
+					<h4 class="heading-4 mb-sm">Blogstack</h4>
+					<p class="mb-md">Semantic UI, Nodejs, MongoDB</p>
+					<button id="project__btn" class="btn btn-outline">More Info</button>
+				</figcaption>
+				<div class="project__overlay">
+					<div class="project__overlay--container">
+
+						<figure class="project__overlay--figure">
+							<img class="project__overlay--image" src="/resources/img/blogstack.png" alt="project-6" />
+							<span class="project__overlay--close">&times;</span>
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i> -->
+						</figure>
+						
+						<div class="project__overlay--header">
+							<h4 class="heading-4 project__overlay--header">Video Player</h4>
+							<a class="link" href="https://github.com/Rituraj26/Blogstack">Github Link</a>
+							<a class="link" href="https://blogstack.herokuapp.com/blogs">Website Link</a>
+						</div>
+
+						<hr>
+						<p class="project__overlay--para">It is a platform where users can upload blogs and it also contains the authorisation part where only the owner of the blogs can only modify the blogs.</p>
+					
+					</div>
+				</div>
+			</figure>
 
 		</section>
 
@@ -402,25 +432,16 @@
 			</ul>
 		</section>
 
-		<section class="credit">
+		<!-- <section class="credit">
 
 			<div class="credit__images">
 				<h4 class="heading-4">Images</h4>
 				<p class="credit__para">All the images used in the website are <span>from unsplash.com</span></p>
-				
-				<a href="https://unsplash.com/@seabas?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><i class="fas fa-external-link-alt"></i>Sebastian Staines</a>
-				<a href="https://unsplash.com/@seabas?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><i class="fas fa-external-link-alt"></i>Sebastian Staines</a>
-				<a href="https://unsplash.com/@wesual?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><i class="fas fa-external-link-alt"></i>Wesual Click</a>
-				<a href="https://unsplash.com/@cortes?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><i class="fas fa-external-link-alt"></i>Dennis Cortés</a>
-				<a href="https://unsplash.com/@antisocia1?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><i class="fas fa-external-link-alt"></i>Greg Ortega</a>
-				<a href="https://unsplash.com/@conkarampelas?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><i class="fas fa-external-link-alt"></i>Con Karampelas</a>
-
 			</div>
 
 			<div class="credit__vectors">
 				<h4 class="heading-4">Vectors</h4>
 				<p class="credit__para">All the vectors used in the website are <span>from freepik.com</span></p>
-				<a href="https://www.freepik.com/free-photos-vectors/technology" target="_blank"><i class="fas fa-external-link-alt"></i>Header vector</a>
 				<a href="https://www.freepik.com/free-photos-vectors/business" target="_blank"><i class="fas fa-external-link-alt"></i>About vector</a>
 			</div>
 
@@ -429,7 +450,7 @@
 				<p class="credit__para">All the icons used in the website are<span>from fontawesome.com</span></p>
 			</div>
 
-		</section>
+		</section> -->
 
 		<footer class="footer">
 			<p>&copy; Copyright 2019 by Rituraj Dutta</p>
