changed project text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -350,13 +350,13 @@
 						</figure>
 						
 						<div class="project__overlay--header">
-							<h4 class="heading-4 project__overlay--header">Video Player</h4>
+							<h4 class="heading-4 project__overlay--header">Budget Calculator</h4>
 							<a class="link" href="https://github.com/Rituraj26/Budget_calculator">Github Link</a>
 							<a class="link" href="https://budgetcalculator265.herokuapp.com">Website Link</a>
 						</div>
 
 						<hr>
-						<p class="project__overlay--para">Video Player is a react application where you can search for any term and based on the search term it will display different results and you can select any result to play a video. It uses youtube api to get the results.</p>
+						<p class="project__overlay--para">It is an application which calculates the budget using the income and expenses.</p>
 					
 					</div>
 				</div>
