added target attribute to project links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -232,8 +232,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Homejone</h4>
-							<a class="link" href="https://github.com/Rituraj26/homejone">Github Link</a>
-							<a class="link" href="https://homejone.herokuapp.com">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/homejone" target="_blank">Github Link</a>
+							<a class="link" href="https://homejone.herokuapp.com" target="_blank">Website Link</a>
 						</div>
 
 						<hr>
@@ -263,8 +263,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Health Kitchen</h4>
-							<a class="link" href="https://github.com/Rituraj26/Health_Kitchen">Github Link</a>
-							<a class="link" href="https://healthkitchen.herokuapp.com">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Health_Kitchen" target="_blank">Github Link</a>
+							<a class="link" href="https://healthkitchen.herokuapp.com" target="_blank">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">It is a landing page for healthy food and juices selling page. I created this website using CSS Grid and using some transformation property to show some nice transitions.</p>
@@ -291,8 +291,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">GPA Calculator</h4>
-							<a class="link" href="https://github.com/Rituraj26/gpa-calculator">Github Link</a>
-							<a class="link" href="https://gpacalculator1926.herokuapp.com">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/gpa-calculator" target="_blank">Github Link</a>
+							<a class="link" href="https://gpacalculator1926.herokuapp.com" target="_blank">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">GPA Calculator is a react application which calculates the gpa of different students. It has two categories for CSE department and Other category. If you are in CSE department then it will directly display all the subjects but if you are in other departments then it will show you the form where you have enter the credit to calculate it. You can also calculate CGPA by entering the semester GPAs.</p>
@@ -321,8 +321,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Freddie Mercury Tribute Page</h4>
-							<a class="link" href="https://github.com/Rituraj26/Freddie-Mercury-Tribute-Page">Github Link</a>
-							<a class="link" href="https://freddiemercury.herokuapp.com">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Freddie-Mercury-Tribute-Page" target="_blank">Github Link</a>
+							<a class="link" href="https://freddiemercury.herokuapp.com" target="_blank">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">It is simple page website which i created to give a tribute to Freddie Mercury. I used CSS Grid to layout the responsiveness.</p>
@@ -351,8 +351,8 @@
 						
 						<div class="project__overlay--header">
 							<h4 class="heading-4 project__overlay--header">Budget Calculator</h4>
-							<a class="link" href="https://github.com/Rituraj26/Budget_calculator">Github Link</a>
-							<a class="link" href="https://budgetcalculator265.herokuapp.com">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Budget_calculator" target="_blank">Github Link</a>
+							<a class="link" href="https://budgetcalculator265.herokuapp.com" target="_blank">Website Link</a>
 						</div>
 
 						<hr>
@@ -381,9 +381,9 @@
 						</figure>
 						
 						<div class="project__overlay--header">
-							<h4 class="heading-4 project__overlay--header">Video Player</h4>
-							<a class="link" href="https://github.com/Rituraj26/Blogstack">Github Link</a>
-							<a class="link" href="https://blogstack.herokuapp.com/blogs">Website Link</a>
+							<h4 class="heading-4 project__overlay--header">Blogstack</h4>
+							<a class="link" href="https://github.com/Rituraj26/Blogstack" target="_blank">Github Link</a>
+							<a class="link" href="https://blogstack.herokuapp.com/blogs" target="_blank">Website Link</a>
 						</div>
 
 						<hr>
