added another project

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -394,7 +394,7 @@
 			</figure>
 
 
-			<!-- <figure class="project__shape">
+			<figure class="project__shape">
 				<img class="project__image" src="/resources/img/ecotourism.png" alt="project-1" />
 				<h4 class="heading-4">Ecotourism</h4>
 				<figcaption class="project__caption">
@@ -407,8 +407,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/ecotourism.png" alt="project-1" />
 							<span class="project__overlay--close">&times;</span>
-								<i class="fas fa-chevron-left" id="left"></i>
-								<i class="fas fa-chevron-right" id="right"></i>
+								<!-- <i class="fas fa-chevron-left" id="left"></i>
+								<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<div class="project__overlay--header">
 							<h4 class="heading-4">Ecotourism</h4>
@@ -419,7 +419,7 @@
 						<p class="project__overlay--para">Here you can get the details of all the eco-friendly places, it also allows you to post a place. You can also comment and look into other’s comment for details. It also shows the exact location of the place.</p>
 					</div>
 				</div>
-			</figure> -->
+			</figure>
 
 		</section>
 
