added another project

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -412,8 +412,8 @@
 						</figure>
 						<div class="project__overlay--header">
 							<h4 class="heading-4">Ecotourism</h4>
-							<a class="link" href="https://github.com/Rituraj26/Eco-tourism">Github Link</a>
-							<a class="link" href="https://ecotourism.herokuapp.com">Website Link</a>
+							<a class="link" href="https://github.com/Rituraj26/Eco-tourism" target="_blank">Github Link</a>
+							<a class="link" href="https://ecotourism.herokuapp.com" target="_blank">Website Link</a>
 						</div>
 						<hr>
 						<p class="project__overlay--para">Here you can get the details of all the eco-friendly places, it also allows you to post a place. You can also comment and look into other’s comment for details. It also shows the exact location of the place.</p>
