added mail button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -430,7 +430,7 @@
 				<li><a href="https://www.instagram.com/rituraj265/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="https://twitter.com/rituraj265" target="_blank"><i class="fab fa-twitter"></i></a></li>
 				<li><a href="https://www.linkedin.com/in/rituraj-dutta-7619a2181/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="" target="_blank"><i class="far fa-envelope"></i></a></li>				
+				<li><a href="mailto:riturajguwahati26@gmail.com" target="_blank"><i class="far fa-envelope"></i></a></li>				
 			</ul>
 		</section>
 
