added another skill

--- a/public/stylesheets/sass/base/_animations.scss
+++ b/public/stylesheets/sass/base/_animations.scss
@@ -57,4 +57,10 @@
 	100% {width: 50%;}
 }
 
-
+@keyframes gitProg {
+	0% {width: 0;}
+	25% {width: 5%;}
+	50% {width: 10%;}
+	// 75% {width: 75%;}
+	100% {width: 20%;}
+}
