--- a/views/index.ejs
+++ b/views/index.ejs
@@ -149,6 +149,17 @@
 						</em>
 					</span>
 				</li>
+				<li class="skills__list--li">
+					<h4 class="heading-4">Git</h4>
+					<span class="skills__list--bar">
+						<span class="git">
+
+						</span>
+						<em class="count">
+							20%
+						</em>
+					</span>
+				</li>
 			</ul>
 			
 		</section>
@@ -402,7 +413,7 @@
 			</ul>
 		</section>
 
-		<section class="credit">
+		<!-- <section class="credit">
 
 			<div class="credit__images">
 				<h4 class="heading-4">Images</h4>
@@ -429,7 +440,7 @@
 				<p class="credit__para">All the icons used in the website are<span>from fontawesome.com</span></p>
 			</div>
 
-		</section>
+		</section> -->
 
 		<footer class="footer">
 			<p>&copy; Copyright 2019 by Rituraj Dutta</p>
