--- a/public/stylesheets/css/style.comp.css
+++ b/public/stylesheets/css/style.comp.css
@@ -84,6 +84,16 @@
   100% {
     width: 50%; } }
 
+@keyframes gitProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 5%; }
+  50% {
+    width: 10%; }
+  100% {
+    width: 20%; } }
+
 *,
 *::after,
 *::before {
@@ -112,7 +122,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 12vh 88vh repeat(7, min-content);
+  grid-template-rows: 8vh 92vh repeat(7, min-content);
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(10, [col-start] minmax(min-content, 12rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   justify-items: center; }
 
@@ -174,6 +184,7 @@ body {
     color: #fff; }
 
 .link:link, .link:visited {
+  width: 15rem;
   background-color: transparent;
   color: #10442f;
   font-family: "Josefin Sans", sans-serif;
@@ -182,7 +193,13 @@ body {
   padding: 1.3rem 2rem;
   border: 1px solid #53483c;
   text-decoration: none;
+  text-align: center;
   transition: .2s; }
+  @media only screen and (max-width: 50em) {
+    .link:link, .link:visited {
+      font-size: 1rem;
+      padding: 1rem 1rem;
+      width: 10rem; } }
 
 .link:hover, .link:active {
   background-color: #10442f;
@@ -216,9 +233,11 @@ body {
 .navbar {
   grid-column: full-start / full-end;
   width: 100%;
-  padding: 5rem;
+  padding: 0 5rem;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 20;
   background-color: #858282;
   display: flex;
   justify-content: space-between;
@@ -237,10 +256,9 @@ body {
       .navbar__links {
         background-color: #858282;
         position: absolute;
-        top: 12vh;
+        top: 8vh;
         left: 0;
         flex-direction: column;
-        z-index: 1;
         display: none;
         width: 100%; }
         .navbar__links li {
@@ -275,7 +293,7 @@ body {
   width: 100%;
   display: grid;
   grid-template-columns: max-content;
-  grid-template-rows: 88vh;
+  grid-template-rows: 92vh;
   justify-content: center;
   justify-items: center;
   align-items: center; }
@@ -377,6 +395,8 @@ body {
         width: 0%; }
       .skills__list--bar .mongodb {
         width: 0%; }
+      .skills__list--bar .git {
+        width: 0%; }
 
 .services {
   grid-column: full-start / full-end;
@@ -432,10 +452,11 @@ body {
   @media only screen and (max-width: 75em) {
     .projects {
       grid-template-columns: repeat(2, 40vw);
-      grid-template-rows: repeat(2, min-content) repeat(2, 40vh); } }
+      grid-template-rows: repeat(2, min-content) repeat(3, 43rem); } }
   @media only screen and (max-width: 28.125em) {
     .projects {
-      grid-template-columns: 90vw; } }
+      grid-template-columns: 90vw;
+      grid-template-rows: repeat(2, min-content) repeat(6, 45rem); } }
   .projects__para {
     grid-column: 1 / -1;
     font-size: 2rem; }
@@ -462,7 +483,11 @@ body {
 .project__caption {
   width: 100%;
   height: 100%;
-  padding: 7rem 3rem 0;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -489,7 +514,7 @@ body {
   position: fixed;
   z-index: 1;
   left: 0;
-  top: 0;
+  top: 6vh;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -504,6 +529,12 @@ body {
     animation-duration: 1s;
     display: grid;
     grid-row-gap: 2rem; }
+    @media only screen and (max-width: 50em) {
+      .project__overlay--container {
+        width: 60%; } }
+    @media only screen and (max-width: 28.125em) {
+      .project__overlay--container {
+        width: 70%; } }
   .project__overlay--figure {
     position: relative; }
   .project__overlay--image {
@@ -525,6 +556,11 @@ body {
       flex-grow: 1; }
     .project__overlay--header a:last-child {
       margin-left: 2rem; }
+    @media only screen and (max-width: 50em) {
+      .project__overlay--header h4 {
+        font-size: 2rem; }
+      .project__overlay--header a:last-child {
+        margin-left: 1.4rem; } }
   .project__overlay--para {
     font-size: 1.7rem; }
 
