--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
 
 		
 		<section class="about" id="about">
-			<img class="about__image" src="/resources/img/about.png" alt="about_photo" />
+			<!-- <img class="about__image" src="/resources/img/about.png" alt="about_photo" /> -->
 			<h2 class="heading-2 title">About Me</h2>
 			<div class="underline">&mdash;</div>
 			<p class="about__paragraph">
