--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -7,7 +7,7 @@
 	grid-template-rows: repeat(3, min-content);
 	// grid-column-gap: 5rem;
 	grid-row-gap: 4rem;
-	justify-items: center;
+	justify-content: center;
 	align-items: center;
 
 	// @media only screen and (max-width: $bp-medium) {
@@ -21,7 +21,7 @@
 	}
 
 	&__paragraph {
-		font-size: 2rem;
+		font-size: 2.5rem;
 		color: $color-secondary;
 		line-height: 5rem;
 		text-align: center;
