--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .about {
 	grid-column: center-start / center-end;
-	padding: 15rem 0;
+	padding: 15rem 5rem;
 
 	display: grid;
 	// grid-template-columns: 30vw 50vw;
@@ -9,6 +9,7 @@
 	grid-row-gap: 4rem;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 
 	// @media only screen and (max-width: $bp-medium) {
 	// 	// grid-template-columns: 70vw;
@@ -24,6 +25,5 @@
 		font-size: 2.5rem;
 		color: $color-secondary;
 		line-height: 5rem;
-		text-align: center;
 	}
 }
