--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -1,28 +1,29 @@
 .about {
 	grid-column: center-start / center-end;
-	padding: 15rem 0;
+	padding: 15rem 5rem;
 
 	display: grid;
-	grid-template-columns: 30vw 50vw;
+	// grid-template-columns: 30vw 50vw;
 	grid-template-rows: repeat(3, min-content);
-	grid-column-gap: 5rem;
+	// grid-column-gap: 5rem;
 	grid-row-gap: 4rem;
 	justify-items: center;
 	align-items: center;
 
-	@media only screen and (max-width: $bp-medium) {
-		grid-template-columns: 70vw;
-		text-align: center;
-	}
+	// @media only screen and (max-width: $bp-medium) {
+	// 	grid-template-columns: 70vw;
+	// 	text-align: center;
+	// }
 
-	&__image {
-		width: 42rem;
-		height: 53rem;
-	}
+	// &__image {
+	// 	width: 42rem;
+	// 	height: 53rem;
+	// }
 
 	&__paragraph {
-		font-size: 2rem;
+		font-size: 2.5rem;
 		color: $color-secondary;
 		line-height: 5rem;
+		text-align: center;
 	}
 }
