--- a/public/stylesheets/css/style.comp.css
+++ b/public/stylesheets/css/style.comp.css
@@ -433,14 +433,17 @@ body {
   .service__paragraph {
     font-size: 1.7rem; }
 
+#projectGrp-2,
+#projectGrp-3 {
+  display: none; }
+
 .projects {
   grid-column: full-start / full-end;
   padding: 20rem 0;
   background-color: #f9f7f6;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 25vw);
-  grid-template-rows: repeat(2, min-content) repeat(3, 35rem);
+  grid-template-rows: repeat(3, min-content) 35rem;
   grid-row-gap: 6rem;
   justify-content: center;
   justify-items: center; }
@@ -455,6 +458,24 @@ body {
   .projects__para {
     grid-column: 1 / -1;
     font-size: 2rem; }
+  .projects__btn, .projects__container {
+    display: grid;
+    grid-template-columns: repeat(3, 25vw);
+    grid-gap: 6rem; }
+  .projects__btn button {
+    background-color: #fff;
+    color: #0886ad;
+    border: 1px solid #0886ad;
+    border-radius: 200px;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    transition: all 0.2s; }
+    .projects__btn button:hover {
+      background-color: #0b6575;
+      color: #fff; }
 
 .project__shape {
   width: 100%;
@@ -473,7 +494,7 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  transition: all .5s; }
+  transition: all 0.5s; }
 
 .project__caption {
   width: 100%;
@@ -492,7 +513,7 @@ body {
   font-size: 1.7rem;
   text-align: center;
   opacity: 0;
-  transition: all .5s;
+  transition: all 0.5s;
   backface-visibility: hidden; }
 
 .project__shape:hover .project__caption {
@@ -537,8 +558,8 @@ body {
   .project__overlay--close {
     color: #f9f7f6;
     position: absolute;
-    right: .9rem;
-    top: .1rem;
+    right: 0.9rem;
+    top: 0.1rem;
     font-size: 30px; }
   .project__overlay--close:hover, .project__overlay--close:focus {
     color: #10442f;
