--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -1,71 +1,106 @@
+#projectGrp-2,
+#projectGrp-3 {
+    display: none;
+}
 .projects {
-	grid-column: full-start / full-end;
-	padding: 20rem 0;
-	background-color: $color-grey-light-1;
-	width: 100%;
+    grid-column: full-start / full-end;
+    padding: 20rem 0;
+    background-color: $color-grey-light-1;
+    width: 100%;
 
-	display: grid;
-	grid-template-columns: repeat(3, 25vw);
-	grid-template-rows: repeat(2, min-content) repeat(3, 35rem);
-	grid-row-gap: 6rem;
-	justify-content: center;
-	justify-items: center;
+    display: grid;
+    // grid-template-columns: repeat(3, 25vw);
+    grid-template-rows: repeat(3, min-content) 35rem;
+    grid-row-gap: 6rem;
+    justify-content: center;
+    justify-items: center;
 
-	@media only screen and (max-width: $bp-largest) {
-		grid-template-columns: repeat(2, 40vw);
-		grid-template-rows: repeat(2, min-content) repeat(4, 43rem);
-	}
-	@media only screen and (max-width: $bp-smallest) {
-		grid-template-columns: 90vw;
-		grid-template-rows: repeat(2, min-content) repeat(7, 45rem);
-	}
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-columns: repeat(2, 40vw);
+        grid-template-rows: repeat(2, min-content) repeat(4, 43rem);
+    }
+    @media only screen and (max-width: $bp-smallest) {
+        grid-template-columns: 90vw;
+        grid-template-rows: repeat(2, min-content) repeat(7, 45rem);
+    }
 
-	&__para {
-		grid-column: 1 / -1;
-		font-size: 2rem;
-	}
+    &__para {
+        grid-column: 1 / -1;
+        font-size: 2rem;
+    }
+
+    &__btn,
+    &__container {
+        display: grid;
+        grid-template-columns: repeat(3, 25vw);
+        grid-gap: 6rem;
+    }
+
+    &__btn button {
+        background-color: #fff;
+        color: $color-primary;
+        border: 1px solid $color-primary;
+        border-radius: 200px;
+        font-family: $font-display;
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        padding: 1.8rem 3rem;
+        cursor: pointer;
+        transition: all 0.2s;
+
+        &:hover {
+            background-color: $color-primary-dark;
+            color: #fff;
+        }
+    }
+
+    // &__btn--selected {
+    //     background-color: $color-primary-dark;
+    //     color: #fff;
+    // }
 }
 
 .project {
+    &__shape {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-rows: 75% 20%;
+        grid-gap: 1rem;
+        align-items: center;
+        justify-items: center;
 
-	&__shape {
-		width: 100%;
-		height: 100%;
-		display: grid;
-		grid-template-rows: 75% 20%;
-		grid-gap: 1rem;
-		align-items: center;
-		justify-items: center;
+        padding: 2rem;
+        position: relative;
+        overflow: hidden;
+        box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0,
+            rgba(0, 0, 0, 0.2) 0 3px 1px -2px,
+            rgba(0, 0, 0, 0.117647) 0 1px 5px 0;
+    }
 
-		padding: 2rem;
-		position: relative;
-		overflow: hidden;
-		box-shadow: rgba(0, 0, 0, .137255) 0 1px 2px 0, rgba(0, 0, 0, .2) 0 3px 1px -2px, rgba(0, 0, 0, .117647) 0 1px 5px 0;
-	}
+    &__image {
+        width: 100%;
+        height: 100%;
+        // transform: scale(1.4);
+        backface-visibility: hidden;
+        transition: all 0.5s;
 
-	&__image {
-		width: 100%;
-		height: 100%;
-		// transform: scale(1.4);
-		backface-visibility: hidden;
-		transition: all .5s;
+        // @media only screen and (max-width: $bp-largest) {
+        // 	width: 40rem;
+        // 	height: 35rem;
+        // }
+    }
 
-		// @media only screen and (max-width: $bp-largest) {
-		// 	width: 40rem;
-		// 	height: 35rem;
-		// }
-	}
-
-	&__caption {
-		width: 100%;
-		height: 100%;
-		// padding: 7rem 3rem 0;
-		display: flex;
-		flex-direction: column;
-		align-content: space-around;
-		align-items: center;
-		justify-content: center;
-		position: absolute;
+    &__caption {
+        width: 100%;
+        height: 100%;
+        // padding: 7rem 3rem 0;
+        display: flex;
+        flex-direction: column;
+        align-content: space-around;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, 20%);
@@ -74,134 +109,130 @@
         font-size: 1.7rem;
         text-align: center;
         opacity: 0;
-        transition: all .5s;
+        transition: all 0.5s;
         backface-visibility: hidden;
-	}
+    }
 
-	&__shape:hover &__caption {
+    &__shape:hover &__caption {
         opacity: 1;
-		transform: translate(-50%, -50%);
-		background-color: $color-grey-light-1;
+        transform: translate(-50%, -50%);
+        background-color: $color-grey-light-1;
     }
 
     &__shape:hover &__image {
-		// transform: scale(1);
-		// background-color: $color-grey-light-1;
-		// filter: blur(3px) brightness(80%);
-		// filter: opacity(30%);
-		display: flex;
-		flex-direction: column;
-		// align-items: baseline;
-		// filter: brightness(0%);
-	}
-	
-	&__overlay {
-		display: none;
-		position: fixed;
-		z-index: 1;
-		left: 0;
-		top: 6vh;
-		height: 100%;
-		width: 100%;
-		overflow: auto;
-		background-color: rgba(0, 0, 0, 0.5);
+        // transform: scale(1);
+        // background-color: $color-grey-light-1;
+        // filter: blur(3px) brightness(80%);
+        // filter: opacity(30%);
+        display: flex;
+        flex-direction: column;
+        // align-items: baseline;
+        // filter: brightness(0%);
+    }
 
-		// i {
-		// 	font-size: 3rem;
-		// 	font-weight: 100;
-		// 	border: 1px solid $color-grey-light-1;
-		// 	position: absolute;
-		// 	top: 50%;
-		// }
-		// i:first-child {
-		// 	left: 1rem;
-		// }
-		// i:last-child {
-		// 	right: 1rem;
-		// }
+    &__overlay {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 6vh;
+        height: 100%;
+        width: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.5);
 
-		&--container {
-			margin: 5% auto;
-			background-color: #fff;
-			padding: 2rem;
-			width: 50%;
-			box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-			animation-name: modalopen;
-			animation-duration: 1s;
+        // i {
+        // 	font-size: 3rem;
+        // 	font-weight: 100;
+        // 	border: 1px solid $color-grey-light-1;
+        // 	position: absolute;
+        // 	top: 50%;
+        // }
+        // i:first-child {
+        // 	left: 1rem;
+        // }
+        // i:last-child {
+        // 	right: 1rem;
+        // }
 
-			display: grid;
-			grid-row-gap: 2rem;
+        &--container {
+            margin: 5% auto;
+            background-color: #fff;
+            padding: 2rem;
+            width: 50%;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+                0 1px 2px rgba(0, 0, 0, 0.24);
+            animation-name: modalopen;
+            animation-duration: 1s;
 
+            display: grid;
+            grid-row-gap: 2rem;
 
-			@media only screen and (max-width: $bp-medium) {
-				width: 60%;
-			}
-			@media only screen and (max-width: $bp-smallest) {
-				width: 70%;
-			}
-		}
+            @media only screen and (max-width: $bp-medium) {
+                width: 60%;
+            }
+            @media only screen and (max-width: $bp-smallest) {
+                width: 70%;
+            }
+        }
 
-		&--figure {
-			position: relative;
-		}
+        &--figure {
+            position: relative;
+        }
 
-		&--image {
-			width: 100%;
-		}
+        &--image {
+            width: 100%;
+        }
 
-		&--close {
-			color: $color-grey-light-1;
-			position: absolute;
-			right: .9rem;
-			top: .1rem;
-			font-size: 30px;
-		}
-		  
-		&--close:hover,
-		&--close:focus {
-			color: $color-secondary;
-			text-decoration: none;
-			cursor: pointer;
-		}
+        &--close {
+            color: $color-grey-light-1;
+            position: absolute;
+            right: 0.9rem;
+            top: 0.1rem;
+            font-size: 30px;
+        }
 
-		&--header {
-			display: flex;
-			align-items: center;
-			// justify-content: space-between;
+        &--close:hover,
+        &--close:focus {
+            color: $color-secondary;
+            text-decoration: none;
+            cursor: pointer;
+        }
 
-			h4 {
-				flex-grow: 1;
-			}
+        &--header {
+            display: flex;
+            align-items: center;
+            // justify-content: space-between;
 
-			a:last-child {
-				margin-left: 2rem;
-			}
+            h4 {
+                flex-grow: 1;
+            }
 
-			@media only screen and (max-width: $bp-medium) {
-				h4 {
-					font-size: 2rem;
-				}
-				a:last-child {
-					margin-left: 1.4rem;
-				}
-			}
-		}
-		
-		&--para {
-			font-size: 1.7rem;
-		}
+            a:last-child {
+                margin-left: 2rem;
+            }
 
-		@keyframes modalopen {
-			from {
-			  opacity: 0;
-			}
-			to {
-			  opacity: 1;
-			}
-		}
-		  
-	}
+            @media only screen and (max-width: $bp-medium) {
+                h4 {
+                    font-size: 2rem;
+                }
+                a:last-child {
+                    margin-left: 1.4rem;
+                }
+            }
+        }
+
+        &--para {
+            font-size: 1.7rem;
+        }
+
+        @keyframes modalopen {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+    }
 }
-
-
-
