--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,6 @@
                 Hi I am <br />
                 Rituraj Dutta<br /><br /><span>Full Stack Web Developer</span>
             </h1>
-            <!-- <img class="header__img" src="/resources/img/header_photo.png" alt="header_photo" /> -->
         </header>
 
         <section class="about" id="about">
@@ -75,92 +74,21 @@
             <h2 class="heading-2 title">My Skills</h2>
             <div class="underline">&mdash;</div>
 
-            <ul class="skills__list list-1">
-                <li class="skills__list--li">
-                    <h4 class="heading-4">HTML5</h4>
-                    <span class="skills__list--bar">
-                        <span class="html"> </span>
-                        <em class="count">
-                            90%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">CSS3</h4>
-                    <span class="skills__list--bar">
-                        <span class="css"> </span>
-                        <em class="count">
-                            85%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">SASS</h4>
-                    <span class="skills__list--bar">
-                        <span class="sass"> </span>
-                        <em class="count">
-                            75%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">Javascript</h4>
-                    <span class="skills__list--bar">
-                        <span class="javascript"> </span>
-                        <em class="count">
-                            65%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">ReactJs</h4>
-                    <span class="skills__list--bar">
-                        <span class="react"> </span>
-                        <em class="count">
-                            65%
-                        </em>
-                    </span>
-                </li>
-            </ul>
-
-            <ul class="skills__list list-2">
-                <li class="skills__list--li">
-                    <h4 class="heading-4">NodeJs</h4>
-                    <span class="skills__list--bar">
-                        <span class="node"> </span>
-                        <em class="count">
-                            60%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">Express</h4>
-                    <span class="skills__list--bar">
-                        <span class="express"> </span>
-                        <em class="count">
-                            60%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">MongoDB</h4>
-                    <span class="skills__list--bar">
-                        <span class="mongodb"> </span>
-                        <em class="count">
-                            50%
-                        </em>
-                    </span>
-                </li>
-                <li class="skills__list--li">
-                    <h4 class="heading-4">Git</h4>
-                    <span class="skills__list--bar">
-                        <span class="git"> </span>
-                        <em class="count">
-                            20%
-                        </em>
-                    </span>
-                </li>
-            </ul>
+            <div class="skills__grid">
+                <img src="/resources/skills/html.png" alt="html5 logo" />
+                <img src="/resources/skills/css.png" alt="css3 logo" />
+                <img
+                    src="/resources/skills/bootstrap.png"
+                    alt="bootstrap logo"
+                />
+                <img src="/resources/skills/js.png" alt="js logo" />
+                <img src="/resources/skills/react.png" alt="react logo" />
+                <img src="/resources/skills/redux.png" alt="redux logo" />
+                <img src="/resources/skills/nodejs.png" alt="nodejs logo" />
+                <img src="/resources/skills/express.png" alt="express logo" />
+                <img src="/resources/skills/mongodb.png" alt="mongodb logo" />
+                <img src="/resources/skills/git.png" alt="git logo" />
+            </div>
         </section>
 
         <section class="services" id="services">
