--- a/public/stylesheets/sass/layout/_skills.scss
+++ b/public/stylesheets/sass/layout/_skills.scss
@@ -1,111 +1,33 @@
 .skills {
-	grid-column: full-start / full-end;
-	padding: 10rem 0;
-	background-color: $color-grey-light-1;
-	width: 100%;
-	
-	display: grid;
-	grid-template-columns: repeat(2, 37vw);
-	grid-template-rows: repeat(2, min-content) max-content;
-	grid-gap: 5rem;
-	justify-content: center;
-	justify-items: center;
-	// align-items: center;
+    grid-column: full-start / full-end;
+    padding: 10rem 0;
+    background-color: $color-grey-light-1;
+    width: 100%;
 
-	@media only screen and (max-width: $bp-medium) {
-		grid-template-columns: 70vw;
-	}
-	@media only screen and (max-width: $bp-smallest) {
-		grid-template-columns: 90vw;
-	}
+    display: grid;
+    grid-gap: 6rem;
+    justify-items: center;
 
-	.list-1 {
-		grid-row: 3 / span 1;
-		grid-column: 1 / span 1;
+    &__grid {
+        padding: 0 10vw;
+        display: grid;
+        grid-template-columns: repeat(5, 12vw);
+        grid-gap: 5vw;
 
-		@media only screen and (max-width: $bp-medium) {
-			grid-column: 1 / -1;
-		}
-	}
-	.list-2 {
-		grid-row: 3 / span 1;
-		grid-column: 2 / span 1;
+        @media only screen and (max-width: $bp-medium) {
+            grid-template-columns: repeat(2, 35vw);
+        }
+        @media only screen and (max-width: $bp-smallest) {
+            grid-template-columns: repeat(2, 47vw);
+            grid-column-gap: 0rem;
+        }
 
-		@media only screen and (max-width: $bp-medium) {
-			grid-column: 1 / -1;
-			grid-row: 4 / -1;
-		}
-	}
-
-	&__list {
-		list-style: none;
-		color: red;
-		width: 100%;
-
-		&--li {
-			margin: 3rem 0;
-		}
-		
-		&--bar {
-			background-color: $color-grey-light-2;
-			height: 2.8rem;
-			border: 1px solid $color-grey-light-1;
-			display: block;
-
-			span {
-				background-color: $color-primary;
-				float: left;
-				height: 100%;	
-				transition: 2s;
-				// animation: Skill 3s linear 1s forwards;
-			}
-			.count {
-				display: flex;
-				align-items: center;
-				justify-content: flex-end;
-				font-weight: 100;
-				word-spacing: 1rem;
-				padding-right: 1rem;
-				font-size: 1.6rem;
-				color: $color-grey-dark-1;
-			}
-
-			.html {
-				width: 0%;
-			}
-
-			.css {
-				width: 0%;
-			}
-
-			.sass {
-				width: 0%;
-			}
-
-			.javascript {
-				width: 0%;
-			}
-
-			.react {
-				width: 0%;
-			}
-			
-			.node {
-				width: 0%;
-			}
-
-			.express {
-				width: 0%;
-			}
-
-			.mongodb {
-				width: 0%;
-			}
-			
-			.git {
-				width: 0%;
-			}
-		}
-	}
-
+        img {
+            width: 100%;
+            height: 100%;
+            box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0,
+                rgba(0, 0, 0, 0.2) 0 3px 1px -2px,
+                rgba(0, 0, 0, 0.117647) 0 1px 5px 0;
+        }
+    }
 }
